# ChatDome

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_ZH.md  SECURITY.md  chatdome  chatdome-cli.py  chatdome-controlplane-design-ZH.md  chatdome-implementation-plan-ZH.md  chatdome-sentinel-design-ZH.md  chatdome.service  config.example.yaml  install.sh  update.sh
controlplane/: _fix_whois.py  pyproject.toml  requirements.txt  setup.py
controlplane/src/chatdome/: __init__.py  command_handlers.py  config.py  errors.py  logger.py  main.py  model_commands.py  model_workflow.py  platform_adapters.py  reload_control.py  runtime_environment.py  runtime_paths.py  slash_commands.py
controlplane/src/chatdome/agent/: __init__.py  audit.py  core.py  engram.py  manual.py  prompts.py  result.py  session.py  tools.py  tracker.py  turns.py
controlplane/src/chatdome/executor/: __init__.py  cmd_parser.py  command_parser.py  registry.py  sandbox.py  validator.py
controlplane/src/chatdome/llm/: __init__.py  client.py  codex_auth.py  codex_cli.py  codex_oauth_service.py  codex_responses.py  manager.py  profile_admin.py
controlplane/tests/: test_agent_progress.py  test_agent_result.py  test_chatdome_cli.py  test_chatdome_menu.py  test_cmd_parser.py  test_codex_auth.py  test_codex_responses.py  test_command_parser.py  test_command_services.py  test_engram.py  test_errors.py  test_executor_validator.py  test_instance_lock.py  test_llm_manager.py  test_llm_profile_admin.py  test_llm_provider_config.py  test_logger.py  test_outbound_messages.py  test_pending_approval_followups.py  test_reload_control.py  test_runtime_paths.py  test_sandbox_logging.py  test_sentinel_alert_format.py  test_sentinel_alert_push_controls.py  test_sentinel_ssh_login.py  test_sentinel_state_machine.py  test_service_entrypoint_templates.py  test_session_compression.py  test_slash_commands.py  test_telegram_help.py  test_telegram_lifecycle.py  test_telegram_llm_admin.py  test_telegram_llm_list.py  test_telegram_progress.py  test_telegram_round_limit.py  test_telegram_sentinel_alert.py  test_telegram_stop.py  test_turn_context.py
(+55 files in other folders)
